[package]
name = "wave_compositor"
version = "0.1.1"
edition = "2024"
authors = ["William Strausser <william.e.strausser@gmail.com>"]
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git", package = "nih_plug_iced" }

[workspace]
members = ["xtask"]

[dev-dependencies]
float-cmp = "0.10.0"
